weather-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: back
  template:
    metadata:
      labels:
        components: back
    spec:
      containers:
        - name: weather
          image: segheim/weather:v1
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
