weather-service.yml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    components: back
