ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
  labels:
    name:
spec:
  ingressClassName: nginx
  rules:
    - host: weather.test
      http:
        paths:
          - backend:
              service:
                name: weather-app-clusterip
                port:
                  number: 8080
            pathType: Prefix
            path: "/"
